@@ -10,4 +10,11 @@
       permission="zope.Public"
       />
 
+  <browser:resourceDirectory
+      name="img"
+      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+      directory="img"
+      permission="zope.Public"
+      />
+
 </configure>
